added git ignore and finished basic numpy array

--- a/numpy/main.ipynb
+++ b/numpy/main.ipynb
@@ -23,14 +23,16 @@
  "cells": [
   {
    "source": [
-    "# Numpy Arrays"
+    "# Numpy\n",
+    "\n",
+    "Playing around with Numpy"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +40,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "arr: np.ndarray = np.array([1, 2, 3])"
-   ]
+    "## Numpy Arrays"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -59,31 +59,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 8
     }
    ],
    "source": [
+    "# Making an array\n",
+    "\n",
+    "arr: np.ndarray = np.array([1, 2, 3])\n",
     "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "type(arr)"
    ]
   },
   {
@@ -103,7 +86,31 @@
     }
    ],
    "source": [
-    "np.ndarray"
+    "# The datatype for the numpy array is numpy's own ndarray\n",
+    "\n",
+    "type(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "# For the datatype of the elements of the array, we can do this\n",
+    "\n",
+    "arr.dtype"
    ]
   },
   {
@@ -123,27 +130,31 @@
     }
    ],
    "source": [
+    "# A quick way to make a numpy array based off a range\n",
+    "\n",
     "np.arange(0, 11, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0.])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0. 0. 0. 0. 0.] [1. 1. 1. 1. 1.]\n"
+     ]
     }
    ],
    "source": [
-    "np.zeros(5)"
+    "# Numpy array of zeros and ones\n",
+    "\n",
+    "zeros: np.ndarray = np.zeros(5)\n",
+    "ones: np.ndarray = np.ones(5)\n",
+    "\n",
+    "print(zeros, ones)"
    ]
   },
   {
@@ -155,8 +166,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.]])"
+       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
       ]
      },
      "metadata": {},
@@ -164,32 +174,15 @@
     }
    ],
    "source": [
-    "np.ones((2, 4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "source": [
+    "# The linspace function return evenly spaced numbers over a specified interval.\n",
+    "# In this case it return the numbers from 0 to 9 with 10 evenly spaced intervals.\n",
+    "\n",
     "np.linspace(0, 9, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +196,314 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "source": [
+    "# Identity Matrix\n",
+    "\n",
     "np.eye(4)"
+   ]
+  },
+  {
+   "source": [
+    "## Numpy Random"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0.15623977, 0.58041577],\n",
+       "       [0.74522447, 0.855533  ]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# A regular random array with a uniform distribution\n",
+    "\n",
+    "np.random.rand(5)\n",
+    "np.random.rand(2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0.71976975,  0.47104807,  0.59792207, -1.33284353,  0.45667921])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# Normal Distribution center around 0\n",
+    "\n",
+    "np.random.randn(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([95,  8, 91, 48, 81, 99, 40,  3, 47, 43, 37, 82,  5, 29, 68, 89, 18,\n",
+       "       13,  7, 85, 16, 84, 97, 11, 78,  4,  8, 95, 80, 90, 13, 42, 26, 37,\n",
+       "       60, 94, 17, 65, 12, 70, 45, 64, 79, 56, 11, 56, 78, 23,  8, 99, 83,\n",
+       "       52, 55, 84, 52, 34, 60, 51, 18, 31,  2, 92,  6,  3,  9, 48, 33, 55,\n",
+       "       50, 22, 49, 58, 36, 48, 72, 22,  4, 22, 74, 62,  0, 57, 84, 67, 82,\n",
+       "       56, 93, 32, 60, 86, 17, 88, 80, 22,  3, 96, 35, 96, 14, 38])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "# Returns random integer(s)\n",
+    "\n",
+    "np.random.randint(0, 100, 100)"
+   ]
+  },
+  {
+   "source": [
+    "## Numpy Array Manipulation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.random.randint(0, 100, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([37,  8,  5, 82, 87,  7, 93, 66, 78, 53])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "source": [
+    "### Shape of array\n",
+    "\n",
+    "Numpy can also handle multi dimensional array. We can get the shape\n",
+    "via `.shape` and change it shape via `.reshape(m, n, ...)`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(10,)\n(2, 5)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([37,  8,  5, 82, 87,  7, 93, 66, 78, 53])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
+   "source": [
+    "# Reshaping array, note that the product of the shape must match\n",
+    "# the number of elements\n",
+    "\n",
+    "# Notice that arr didn't get modified inplace\n",
+    "\n",
+    "print(arr.shape)\n",
+    "\n",
+    "arr2d = arr.reshape(2, 5)\n",
+    "\n",
+    "print(arr2d.shape)\n",
+    "arr"
+   ]
+  },
+  {
+   "source": [
+    "### Getting  max and min values from array\n",
+    "\n",
+    "Numpy has `.max()` and `.min()` functions. It's self explanatory.\n",
+    "`.argmax()` and `.argmin()` will return the index of said max and min value.\n",
+    "\n",
+    "When given to a multi dimentional array, it'll return the answer as if it's a one-d array."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "# Getting max value\n",
+    "\n",
+    "arr.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "# Getting min value\n",
+    "\n",
+    "arr.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "arr.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "arr.argmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[37,  8,  5, 82, 87],\n",
+       "       [ 7, 93, 66, 78, 53]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "arr2d.argmax()\n",
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "arr2d.argmin()"
    ]
   },
   {
