update with indexing

--- a/numpy/main.ipynb
+++ b/numpy/main.ipynb
@@ -507,6 +507,366 @@
    ]
   },
   {
+   "source": [
+    "## Numpy Array Indexing\n",
+    "\n",
+    "Just like regular python arrays, we can index numpy arrays.\n",
+    "The syntax is similar to python array indexing with the square bracket notation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
+   "source": [
+    "arr: np.ndarray = np.arange(0, 11)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
+   "source": [
+    "arr[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "arr[5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "source": [
+    "arr[5:8]"
+   ]
+  },
+  {
+   "source": [
+    "## Manipulating slices\n",
+    "\n",
+    "Slicing an array returns a reference to the sliced array."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 74
+    }
+   ],
+   "source": [
+    "arr = np.arange(0, 11)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "# Here, I'm getting a sliced of the array\n",
+    "\n",
+    "sliced_of_arr = arr[:6]\n",
+    "sliced_of_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([99, 99, 99, 99, 99, 99,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "source": [
+    "# Changing the content of the sliced array will result in changing\n",
+    "# the elements of the original array to in the position we just sliced from\n",
+    "\n",
+    "sliced_of_arr[:] = 99\n",
+    "\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If we want a copy, use `.copy()`\n",
+    "\n",
+    "arr_copy = arr.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[20 99 99 99 99 99  6  7  8  9 10] [99 99 99 99 99 99  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_copy[0] = 20\n",
+    "print(arr_copy, arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  2.,  3.,  4.],\n",
+       "       [ 5.,  6.,  7.,  8.,  9.],\n",
+       "       [10., 11., 12., 13., 14.],\n",
+       "       [15., 16., 17., 18., 19.],\n",
+       "       [20., 21., 22., 23., 24.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 86
+    }
+   ],
+   "source": [
+    "# With 2d arrays you can index via double square bracket or just single square brakcet with a comma\n",
+    "\n",
+    "arr2d = np.linspace(0, 24, 25)\n",
+    "arr2d = arr2d.reshape(5, 5)\n",
+    "\n",
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "source": [
+    "arr2d[1, 2] == arr2d[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1., 2., 3., 4.],\n",
+       "       [6., 7., 8., 9.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "source": [
+    "arr2d[:2, 1:]"
+   ]
+  },
+  {
+   "source": [
+    "## Conditional Selections"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 91
+    }
+   ],
+   "source": [
+    "arr = np.arange(1, 11)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
+   "source": [
+    "arr[arr > 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 97
+    }
+   ],
+   "source": [
+    "arr[arr < 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 102
+    }
+   ],
+   "source": [
+    "# Doing conditional indexing will return a one-d array\n",
+    "\n",
+    "arr_2d = np.arange(50).reshape(5, 10)\n",
+    "arr_2d[arr_2d < 30]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
