--- a/numpy/main.ipynb
+++ b/numpy/main.ipynb
@@ -867,6 +867,343 @@
    ]
   },
   {
+   "source": [
+    "## Numpy Operations\n",
+    "\n",
+    "- Array with Array\n",
+    "- Array with Scalars\n",
+    "- Universal Array Functions\n",
+    "\n",
+    "You can check all of numpy's universal functions [here](https://numpy.org/doc/stable/reference/ufuncs.html)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 107
+    }
+   ],
+   "source": [
+    "arr = np.arange(0, 11)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 104
+    }
+   ],
+   "source": [
+    "arr + arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 105
+    }
+   ],
+   "source": [
+    "arr - arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
+   "source": [
+    "arr + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([-100,  -99,  -98,  -97,  -96,  -95,  -94,  -93,  -92,  -91,  -90])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
+   "source": [
+    "arr - 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-109-7f952cd3e0ce>:1: RuntimeWarning: invalid value encountered in true_divide\n  arr / arr\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([nan,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 109
+    }
+   ],
+   "source": [
+    "arr / arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-112-8c4712fdf566>:1: RuntimeWarning: invalid value encountered in true_divide\n  n = (arr / arr)[0]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 112
+    }
+   ],
+   "source": [
+    "n = (arr / arr)[0]\n",
+    "type(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-113-e66ae8057bc3>:1: RuntimeWarning: divide by zero encountered in true_divide\n  1 / arr\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([       inf, 1.        , 0.5       , 0.33333333, 0.25      ,\n",
+       "       0.2       , 0.16666667, 0.14285714, 0.125     , 0.11111111,\n",
+       "       0.1       ])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 113
+    }
+   ],
+   "source": [
+    "1 / arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 114
+    }
+   ],
+   "source": [
+    "np.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.        , 1.        , 1.41421356, 1.73205081, 2.        ,\n",
+       "       2.23606798, 2.44948974, 2.64575131, 2.82842712, 3.        ,\n",
+       "       3.16227766])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 116
+    }
+   ],
+   "source": [
+    "# Square Root\n",
+    "\n",
+    "np.sqrt(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1.00000000e+00, 2.71828183e+00, 7.38905610e+00, 2.00855369e+01,\n",
+       "       5.45981500e+01, 1.48413159e+02, 4.03428793e+02, 1.09663316e+03,\n",
+       "       2.98095799e+03, 8.10308393e+03, 2.20264658e+04])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 118
+    }
+   ],
+   "source": [
+    "# exponential\n",
+    "\n",
+    "np.exp(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.84147098,  0.90929743,  0.14112001, -0.7568025 ,\n",
+       "       -0.95892427, -0.2794155 ,  0.6569866 ,  0.98935825,  0.41211849,\n",
+       "       -0.54402111])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 119
+    }
+   ],
+   "source": [
+    "np.sin(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-120-a67b4ae04e95>:1: RuntimeWarning: divide by zero encountered in log\n  np.log(arr)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([      -inf, 0.        , 0.69314718, 1.09861229, 1.38629436,\n",
+       "       1.60943791, 1.79175947, 1.94591015, 2.07944154, 2.19722458,\n",
+       "       2.30258509])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 120
+    }
+   ],
+   "source": [
+    "np.log(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 122
+    }
+   ],
+   "source": [
+    "np.sin(np.pi/2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
